--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/bootstrap-4.1.3-dist/css/bootstrap.min.css">
